(library
 (name tdl)
 (ctypes
  (external_library_name libtdl)
  (headers
   (include "tdl.h" "tdl/tdl_version.h"))
  (build_flags_resolver
   (vendored
    (c_flags -ltdl)
    (c_library_flags -ltdl)))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
