(library
 (public_name tdl)
 (ctypes
  (external_library_name libtdl)
  (headers
   (include
    "tdl.h"
    "tdl/tdl_version.h"
    "tdl/tdl_canvas.h"
    "tdl/tdl_text.h"
    "tdl/tdl_style.h"))
  (build_flags_resolver
   (vendored
    (c_flags -ltdl -lu8string)
    (c_library_flags -ltdl -lu8string)))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency sequential)
   (instance Functions)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
